fix: update headings for better readability and adjust layout for hero images

--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,7 @@ a {
 }
 
 .container {
-    padding-inline: 80px;
-    max-width: 1440px;
+    max-width: 1280px;
     margin: 0 auto;
 }
 
@@ -269,6 +268,7 @@ button {
     line-height: var(--font-line-height-heroes);
     letter-spacing: -0.5px;
     margin: 0;
+    max-width: min-content;
 }
 
 .block-line {
@@ -359,9 +359,35 @@ span.hero__accent {
     color: rgba(34, 52, 73, 0.4);
 }
 
-figure.hero__img-container {
+.hero__img-container {
     padding-block: 47px 30px;
+    display: grid;
+    grid-template-columns: 6.3% 15.1% 27%;
+    grid-template-rows: 3% 32%;
+    grid-gap: 32px;
 }
+
+.hero__img-examples {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    object-fit: cover;
+}
+
+.hero__image-ui {
+    grid-column: 1/2;
+    grid-row: 1/4;
+    object-fit: cover;
+    object-position: right;
+    z-index: 1;
+}
+
+.hero__img-screens {
+    object-fit: cover;
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+
 
 .products {
     display: flex;
@@ -1480,7 +1506,7 @@ article.categories__cards:hover svg {
     letter-spacing: -0.5px;
     margin: 0;
     padding: 64px 0 100px 0;
-    white-space: pre-line;
+    max-width: min-content;
 }
 
 .side-filters__form-price,
@@ -2246,7 +2272,6 @@ position: relative;
     letter-spacing: -0.5px;
     margin: 0;
     margin-top: 24px;
-    white-space: pre-line;
 }
 
 .blog-details__background-heading {
